# DS-GA-1019

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: 01_baseline_and_profiling.ipynb  02_optimizations.ipynb  03_combined_optimizations.ipynb  04_final_results.ipynb
src/: async_batching.py  benchmark.py  config.py  inference.py  kv_cache.py  model.py  profiling.py  quantization.py
